# dotfiles

./: .gitignore  .rumdl.toml  CLAUDE.md  Diagrama sem nome.drawio  README.md  TODO.md  asad  backup.sh  export_config.sh  install.py  install.sh  install_cli.py  main.py  maintenance.sh  p  packages.toml  packages_  pyproject.toml  setup.sh  test.py  teste.sh  user_configuration.json
.config/gtk-3.0/: settings.ini
bash/: .bashrc
docs/: README.md  bash.md  bat.md  eza.md  go.md  neovim.md  python-setup.md  rust.md  stow.md  tmux.md  todo.md  window-managers.md  zsh.md
dotfiles/: .p10k.zsh  .zshrc  code-profile.code-profile  install.sh  packages-zsh  pacman.conf
editor/: README.md
git/: .gitconfig
i3/: config
mcp/: .env-example  README.md  claude-desktop.json  claude-dev.json  claude-research.json  mcp_manager.py  setup.sh
my-dotfiles/: config.yaml
my-dotfiles/dotfiles/.config/qtile/: config.py  pyproject.toml
nvim/: setup.sh
on-prem/: README.md
pkg-files/: aur  base  kde  minimal  pipx  python
scripts/: arch-full.sh  arch-wsl.sh  arch.sh  bluetooth.sh  code-extensions.sh  debian-wsl.sh  debian.sh  git_config.py  interactive_installation.py  llms.sh  lutris.sh  paru.sh  profile.py  win.ps1  wsl.sh  zsh.sh
self-hosted/: docker.txt
tmux/: .tmux.conf
tmux.tpm/: .tmux.conf
trash/: README.md  install.toml
utils/: backup.py  paru-last-update.sh  utils.py
vim/: .vimrc
vim.plug/: .vimrc
windows/: .wslconfig  README.md  antimicrox.gamecontroller.amgp  winscript.json
zsh/: .zlogin  .zprofile  .zsh_functions  .zshenv  .zshrc  setup.sh
(+798 files in other folders)
