[tool.poetry]
name = "qtile dev"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
qtile = "^0.23.0"
qtile-extras = {git = "https://github.com/elParaguayo/qtile-extras.git"}
rich = "^13.7.0"
rofi-menu = "^0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
